--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -96,14 +96,52 @@
 
     </HorizontalScrollView>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/hotelList"
+    <LinearLayout
+        android:id="@+id/llContenedor"
         android:layout_width="409dp"
         android:layout_height="733dp"
+        android:orientation="vertical"
+        android:visibility="gone"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/horizontalScrollView"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/hotelList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_hotel" />
+
+    </LinearLayout>
+
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:layout_width="409dp"
+        android:layout_height="733dp"
+        android:layout_marginTop="16dp"
+        app:shimmer_auto_start="true"
+        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:listitem="@layout/item_hotel" />
+        app:layout_constraintStart_toStartOf="parent">
+
+        <LinearLayout
+            android:id="@+id/llCargando"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <include layout="@layout/item_loading"/>
+            <include layout="@layout/item_loading"/>
+            <include layout="@layout/item_loading"/>
+            <include layout="@layout/item_loading"/>
+            <include layout="@layout/item_loading"/>
+
+        </LinearLayout>
+
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
