--- a/app/src/main/res/layout/item_hotel.xml
+++ b/app/src/main/res/layout/item_hotel.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/itemContainer"
     android:layout_width="match_parent"
-    android:layout_height="240dp"
+    android:layout_height="228dp"
     android:orientation="vertical"
     android:background="#00D9D9D9"
     android:paddingLeft="20dp"
@@ -25,31 +25,82 @@
         android:orientation="horizontal"
         android:background="#D9D9D9">
 
-        <TextView
-            android:id="@+id/txt_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hotel Bellaco,"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
-            android:textColor="@color/black"
-            android:textSize="23sp" />
+        <LinearLayout
+            android:layout_width="270dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/txt_ciudad"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Málaga"
-            android:layout_weight="4"
-            android:gravity="left"
-            android:textColor="@color/black"
-            android:textSize="23sp" />
+            <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+                android:layout_weight="1"
+            android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/txt_hotel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Hotel:"
+                    android:layout_marginLeft="15dp"
+                    android:gravity="center_horizontal"
+                    android:textColor="@color/black"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/txt_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:text="Hotel Bellaco"
+                    android:gravity="center_horizontal"
+                    android:textColor="@color/black"
+                    android:textSize="20sp" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+
+                <TextView
+                    android:id="@+id/txt_localidad"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Localidad:"
+                    android:layout_marginLeft="15dp"
+                    android:gravity="left"
+                    android:textColor="@color/black"
+                    android:textSize="20sp" />
+
+
+                <TextView
+                    android:id="@+id/txt_ciudad"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Málaga"
+                    android:layout_marginLeft="8dp"
+                    android:gravity="left"
+                    android:textColor="@color/black"
+                    android:textSize="20sp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <ImageButton
+            android:id="@+id/btn_fav"
+            android:layout_width="50dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_fav_off" />
 
         <ImageButton
             android:id="@+id/btn_edit"
             android:layout_width="50dp"
             android:layout_weight="1"
-            android:layout_height="50dp"
+            android:layout_height="match_parent"
             android:src="@drawable/ic_edit" />
     </LinearLayout>
 
