--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -41,12 +41,11 @@
     <EditText
         android:id="@+id/edtCiudad"
         android:layout_width="240dp"
-        android:layout_height="45dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:background="@color/backText"
         android:ems="10"
         android:hint="@string/edt_city"
-        android:inputType="textEmailAddress"
         android:padding="10dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
@@ -58,12 +57,11 @@
     <EditText
         android:id="@+id/edtCalle"
         android:layout_width="240dp"
-        android:layout_height="45dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:background="@color/backText"
         android:ems="10"
         android:hint="@string/edt_street"
-        android:inputType="textEmailAddress"
         android:padding="10dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
@@ -75,7 +73,7 @@
     <EditText
         android:id="@+id/edtUrl"
         android:layout_width="240dp"
-        android:layout_height="45dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:background="@color/backText"
         android:ems="10"
@@ -91,7 +89,7 @@
     <EditText
         android:id="@+id/edtInfo"
         android:layout_width="240dp"
-        android:layout_height="45dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:background="@color/backText"
         android:ems="10"
