--- a/app/src/main/res/layout/item_hotel.xml
+++ b/app/src/main/res/layout/item_hotel.xml
@@ -93,6 +93,7 @@
             android:id="@+id/btn_fav"
             android:layout_width="50dp"
             android:layout_weight="1"
+            android:background="#00D8BDBD"
             android:layout_height="match_parent"
             android:src="@drawable/ic_fav_off" />
 
@@ -100,6 +101,7 @@
             android:id="@+id/btn_edit"
             android:layout_width="50dp"
             android:layout_weight="1"
+            android:background="#00D8BDBD"
             android:layout_height="match_parent"
             android:src="@drawable/ic_edit" />
     </LinearLayout>
