--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -28,7 +28,6 @@
         android:background="@color/backText"
         android:ems="10"
         android:hint="@string/edt_info"
-        android:inputType="textPersonName"
         android:padding="10dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
@@ -62,7 +61,6 @@
         android:background="@color/backText"
         android:ems="10"
         android:hint="@string/edt_city"
-        android:inputType="textEmailAddress"
         android:padding="10dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
@@ -90,7 +88,7 @@
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/edtInfo"
         android:layout_width="240dp"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:layout_marginTop="20dp"
         android:background="@color/backText"
         android:ems="10"
