Datos del usuario mostrados en el ProfileFragment

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -11,11 +11,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profile_image"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
             android:src="@drawable/profile"
+            app:civ_border_width="2dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -23,6 +24,7 @@
             app:layout_constraintVertical_chainStyle="packed"
             app:layout_constraintHorizontal_bias="0.5"
             android:layout_marginTop="32dp" />
+
 
         <TextView
             android:id="@+id/name_textview"
