--- a/app/src/main/res/layout/dialog_review.xml
+++ b/app/src/main/res/layout/dialog_review.xml
@@ -17,11 +17,7 @@
 
     <Button
         android:id="@+id/btn_submit"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/rounded_button"
-        android:layout_gravity="center"
-        android:layout_marginTop="15dp"
-        android:text="Enviar" />
-
+        android:text="Submit" />
 </LinearLayout>
