--- a/app/src/main/res/layout/dialog_review.xml
+++ b/app/src/main/res/layout/dialog_review.xml
@@ -17,7 +17,8 @@
 
     <Button
         android:id="@+id/btn_submit"
-        android:layout_width="wrap_content"
+        android:background="@drawable/rounded_button"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Submit" />
 </LinearLayout>
