--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,6 +10,7 @@
         android:id="@+id/horizontalScrollView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#9C8D8D"
         android:scrollbars="none"
         android:layout_marginTop="15dp"
         app:layout_constraintTop_toTopOf="parent">
