--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/fondo"
-    tools:context=".login.RegisterActivity">
+    android:background="@color/fondo">
 
     <TextView
         android:id="@+id/txtAdd"
@@ -53,21 +52,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtAdd" />
 
-    <com.google.android.material.textfield.TextInputEditText
+    <Spinner
         android:id="@+id/edtCiudad"
         android:layout_width="240dp"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:layout_marginTop="20dp"
         android:background="@color/backText"
-        android:ems="10"
-        android:hint="@string/edt_city"
-        android:padding="10dp"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtNombre" />
+
+
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/edtStreet"
